--- a/Python Challenge/Approach.ipynb
+++ b/Python Challenge/Approach.ipynb
@@ -48,6 +48,10 @@
    "source": [
     "## 2\n",
     "\n",
+    "\n",
+    "everybody thinks twice before solving this.\n",
+    "\n",
+    "\n",
     "Hint:\n",
     "- K -> M\n",
     "- O -> Q\n",
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "a690a80d-ca9c-4a4c-ba17-445cfc894771",
    "metadata": {},
    "outputs": [
@@ -85,12 +89,14 @@
    "source": [
     "## 3\n",
     "\n",
+    "recognize the characters. maybe they are in the book, but MAYBE they are in the page source.\n",
+    "\n",
     "Inspect page source, copy comment block, save to 3.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "a7c3c317-8f7d-44bd-97b6-027954a72626",
    "metadata": {},
    "outputs": [
@@ -100,7 +106,7 @@
        "'e q u a l i t y'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,6 +114,7 @@
    "source": [
     "import re\n",
     "t3 = open(\"3.txt\", \"r\").read()\n",
+    "# Find all letters\n",
     "sol = \" \".join(re.findall(\"[a-zA-Z]+\", t3))\n",
     "sol"
    ]
@@ -145,6 +152,7 @@
    ],
    "source": [
     "t4 = open(\"4.txt\", \"r\").read()\n",
+    "# Find all lowercase letters surrounded by exactly 3 uppercase letters nXXXxXXXn.\n",
     "reg = '[a-z]{1}[A-Z]{3}[a-z]{1}[A-Z]{3}[a-z]{1}'\n",
     "sol = \" \".join(re.findall(reg, t4))\n",
     "sol"
@@ -155,7 +163,62 @@
    "id": "c1745d84-748a-4dcf-bbb8-39eb342340f1",
    "metadata": {},
    "source": [
-    "## 5"
+    "## 5\n",
+    "\n",
+    "follow the chain\n",
+    "\n",
+    "Hint: urllib may help. DON'T TRY ALL NOTHINGS, since it will never end. 400 times is more than enough."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "24a5cd1a-71ea-4980-941e-99467c1ad757",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1682\n"
+     ]
+    }
+   ],
+   "source": [
+    "request_url = urllib.request.urlopen(f'http://www.pythonchallenge.com/pc/def/linkedlist.php?nothing={1}')\n",
+    "byte = request_url.read().decode(\"utf-8\") \n",
+    "nothing = re.findall(r'\\d+', byte)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "550fea24-492d-4945-8821-f8c5c82c72b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "import numpy as np\n",
+    "# Only loop max 400 times\n",
+    "i = 400\n",
+    "nothing = 1\n",
+    "while i > 0:\n",
+    "    request_url = urllib.request.urlopen(f'http://www.pythonchallenge.com/pc/def/linkedlist.php?nothing={nothing}')\n",
+    "    # convert byte object output to string\n",
+    "    byte = request_url.read().decode(\"utf-8\") \n",
+    "    # Get digits out of byte string\n",
+    "    nothing = re.findall(r'\\d+', byte)[0]\n",
+    "    i -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "217a29fe-a60a-4a1b-86a0-c130f439eb68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(nothing)"
    ]
   }
  ],
