--- a/Python Challenge/Approach.ipynb
+++ b/Python Challenge/Approach.ipynb
@@ -15,30 +15,19 @@
    "id": "ecb02e15-f0e7-46a6-b894-ce01adf92041",
    "metadata": {},
    "source": [
-    "## 1\n",
+    "## 0\n",
     "\n",
     "Hint: try to change the URL address."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "dbce4707-2335-4034-8540-154390e93f54",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "274877906944"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "2**38"
+    "sol0 = 2**38"
    ]
   },
   {
@@ -46,7 +35,7 @@
    "id": "a7cdd6d7-8b53-43e8-ae74-e942bc01a1e0",
    "metadata": {},
    "source": [
-    "## 2\n",
+    "## 1\n",
     "\n",
     "\n",
     "everybody thinks twice before solving this.\n",
@@ -62,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "id": "a690a80d-ca9c-4a4c-ba17-445cfc894771",
    "metadata": {},
    "outputs": [
@@ -83,11 +72,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "ed823dfa-f1f0-44a9-a6f1-3097f2d2cc63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input = \"map\"\n",
+    "sol1 = input.translate({ord(x): y for (x, y) in zip(intab, outtab)})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5ae7eacc-a7c0-4817-96d7-b6107d0c7c72",
    "metadata": {},
    "source": [
-    "## 3\n",
+    "## 2\n",
     "\n",
     "recognize the characters. maybe they are in the book, but MAYBE they are in the page source.\n",
     "\n",
@@ -96,27 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "id": "a7c3c317-8f7d-44bd-97b6-027954a72626",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'e q u a l i t y'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
-    "t3 = open(\"3.txt\", \"r\").read()\n",
+    "t2 = open(\"2.txt\", \"r\").read()\n",
     "# Find all letters\n",
-    "sol = \" \".join(re.findall(\"[a-zA-Z]+\", t3))\n",
-    "sol"
+    "sol2= \" \".join(re.findall(\"[a-zA-Z]+\", t2)).replace(\" \", \"\")"
    ]
   },
   {
@@ -124,7 +112,7 @@
    "id": "e36f1b63-38ba-4a0d-b22c-5bcfb42490a6",
    "metadata": {},
    "source": [
-    "## 4\n",
+    "## 3\n",
     "\n",
     "One small letter, surrounded by EXACTLY three big bodyguards on each of its sides.\n",
     "\n",
@@ -135,27 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "id": "bf017a48-17ea-4f12-baeb-3835dccda325",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'qIQNlQSLi eOEKiVEYj aZADnMCZq bZUTkLYNg uCNDeHSBj kOIXdKBFh dXJVlGZVm gZAGiLQZx vCJAsACFl qKWGtIDCj'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "t4 = open(\"4.txt\", \"r\").read()\n",
+    "t3 = open(\"3.txt\", \"r\").read()\n",
     "# Find all lowercase letters surrounded by exactly 3 uppercase letters nXXXxXXXn.\n",
     "reg = '[a-z]{1}[A-Z]{3}[a-z]{1}[A-Z]{3}[a-z]{1}'\n",
-    "sol = \" \".join(re.findall(reg, t4))\n",
-    "sol"
+    "bodyguarded = \" \".join(re.findall(reg, t3))\n",
+    "sol3 = \"\"\n",
+    "# Get middle letter of each word\n",
+    "for word in bodyguarded.split(' '):\n",
+    "    sol3 = sol3 + word[4]"
    ]
   },
   {
@@ -163,7 +143,7 @@
    "id": "c1745d84-748a-4dcf-bbb8-39eb342340f1",
    "metadata": {},
    "source": [
-    "## 5\n",
+    "## 4\n",
     "\n",
     "follow the chain\n",
     "\n",
@@ -172,27 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "24a5cd1a-71ea-4980-941e-99467c1ad757",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1682\n"
-     ]
-    }
-   ],
-   "source": [
-    "request_url = urllib.request.urlopen(f'http://www.pythonchallenge.com/pc/def/linkedlist.php?nothing={1}')\n",
-    "byte = request_url.read().decode(\"utf-8\") \n",
-    "nothing = re.findall(r'\\d+', byte)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "550fea24-492d-4945-8821-f8c5c82c72b3",
    "metadata": {},
    "outputs": [],
@@ -206,20 +166,46 @@
     "    request_url = urllib.request.urlopen(f'http://www.pythonchallenge.com/pc/def/linkedlist.php?nothing={nothing}')\n",
     "    # convert byte object output to string\n",
     "    byte = request_url.read().decode(\"utf-8\") \n",
+    "    \n",
     "    # Get digits out of byte string\n",
-    "    nothing = re.findall(r'\\d+', byte)[0]\n",
-    "    i -= 1"
+    "    digits = re.findall(r'\\d+', byte)\n",
+    "    \n",
+    "    if digits != []:\n",
+    "        nothing = digits[0]\n",
+    "        i -= 1\n",
+    "    # End loop if no more nothings\n",
+    "    else:\n",
+    "        i = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "217a29fe-a60a-4a1b-86a0-c130f439eb68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request_url = urllib.request.urlopen(f'http://www.pythonchallenge.com/pc/def/linkedlist.php?nothing={nothing}')\n",
+    "sol4 = request_url.read().decode(\"utf-8\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f49049e5-843f-431b-b228-16a33d71e2ce",
+   "metadata": {},
+   "source": [
+    "## 5 \n",
+    "\n",
+    "pronounce it"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "217a29fe-a60a-4a1b-86a0-c130f439eb68",
+   "id": "f5ce05c7-7f83-4fd8-a042-ac239100fedb",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(nothing)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
