adiz csv update

--- a/Taiwan ADIZ Violations/Taiwan ADIZ Violations.ipynb
+++ b/Taiwan ADIZ Violations/Taiwan ADIZ Violations.ipynb
@@ -5,7 +5,11 @@
    "id": "d8edc303-7c3f-4d27-b247-963d97e7a9d2",
    "metadata": {},
    "source": [
-    "# Taiwan ADIZ Violations"
+    "# Taiwan ADIZ Violations\n",
+    "\n",
+    "Data gathering and analysis by Gerald C. Brown at FPRI.\n",
+    "\n",
+    "Data Source: ROC Ministry of National Defense"
    ]
   },
   {
@@ -38,26 +42,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "2372bd36-1209-4e0f-b7a8-e71f0a861626",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sheet_id = \"1qbfYF0VgDBJoFZN5elpZwNTiKZ4nvCUcs5a7oYwm52g\"\n",
-    "sheet_url = f\"https://docs.google.com/spreadsheets/d/{sheet_id}/export?gid=0&format=csv\"\n",
-    "df = pd.read_csv(sheet_url)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "09271815-4f58-488e-8b3f-ec8bde1c66a2",
-   "metadata": {},
-   "source": [
-    "# EDA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "36cf3d7c-df47-4142-9c7e-02a5f96ba037",
    "metadata": {},
    "outputs": [
     {
@@ -92,9 +76,10 @@
        "      <th># of Aircraft</th>\n",
        "      <th>Location</th>\n",
        "      <th>Tail Numbers</th>\n",
-       "      <th>Unnamed: 11</th>\n",
+       "      <th>Night</th>\n",
        "      <th>Notes</th>\n",
        "      <th>Source</th>\n",
+       "      <th>Map</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -114,6 +99,7 @@
        "      <td>NaN</td>\n",
        "      <td>unspecified mix of SU-30 and J-10, 21 total vi...</td>\n",
        "      <td>https://www.mnd.gov.tw/English/Publish.aspx?ti...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -131,6 +117,7 @@
        "      <td>NaN</td>\n",
        "      <td>unspecified mix of SU-30 and Y-8, 21 total vio...</td>\n",
        "      <td>https://www.mnd.gov.tw/English/Publish.aspx?ti...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -148,6 +135,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>https://www.mnd.gov.tw/Publish.aspx?p=77345&amp;ti...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -165,6 +153,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>https://www.mnd.gov.tw/Publish.aspx?p=77350&amp;ti...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -182,6 +171,7 @@
        "      <td>NaN</td>\n",
        "      <td>assumed equal split of total sorties for south...</td>\n",
        "      <td>https://www.mnd.gov.tw/Publish.aspx?p=77350&amp;ti...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -195,12 +185,12 @@
        "3  9/18/2020  2020      9   18       6      Friday        Bomber   \n",
        "4  9/18/2020  2020      9   18       6      Friday       Fighter   \n",
        "\n",
-       "  Aircraft Type  # of Aircraft        Location  Tail Numbers Unnamed: 11  \\\n",
-       "0  *Unspecified             10             unk           NaN         NaN   \n",
-       "1  *Unspecified             11             unk           NaN         NaN   \n",
-       "2       Y-8 ASW              2  Southwest ADIZ           NaN         NaN   \n",
-       "3           H-6              2  Southwest ADIZ           NaN         NaN   \n",
-       "4          J-16              4  Southwest ADIZ           NaN         NaN   \n",
+       "  Aircraft Type  # of Aircraft        Location  Tail Numbers Night  \\\n",
+       "0  *Unspecified             10             unk           NaN   NaN   \n",
+       "1  *Unspecified             11             unk           NaN   NaN   \n",
+       "2       Y-8 ASW              2  Southwest ADIZ           NaN   NaN   \n",
+       "3           H-6              2  Southwest ADIZ           NaN   NaN   \n",
+       "4          J-16              4  Southwest ADIZ           NaN   NaN   \n",
        "\n",
        "                                               Notes  \\\n",
        "0  unspecified mix of SU-30 and J-10, 21 total vi...   \n",
@@ -209,26 +199,29 @@
        "3                                                NaN   \n",
        "4  assumed equal split of total sorties for south...   \n",
        "\n",
-       "                                              Source  \n",
-       "0  https://www.mnd.gov.tw/English/Publish.aspx?ti...  \n",
-       "1  https://www.mnd.gov.tw/English/Publish.aspx?ti...  \n",
-       "2  https://www.mnd.gov.tw/Publish.aspx?p=77345&ti...  \n",
-       "3  https://www.mnd.gov.tw/Publish.aspx?p=77350&ti...  \n",
-       "4  https://www.mnd.gov.tw/Publish.aspx?p=77350&ti...  "
+       "                                              Source  Map  \n",
+       "0  https://www.mnd.gov.tw/English/Publish.aspx?ti...  NaN  \n",
+       "1  https://www.mnd.gov.tw/English/Publish.aspx?ti...  NaN  \n",
+       "2  https://www.mnd.gov.tw/Publish.aspx?p=77345&ti...  NaN  \n",
+       "3  https://www.mnd.gov.tw/Publish.aspx?p=77350&ti...  NaN  \n",
+       "4  https://www.mnd.gov.tw/Publish.aspx?p=77350&ti...  NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "sheet_id = \"1qbfYF0VgDBJoFZN5elpZwNTiKZ4nvCUcs5a7oYwm52g\"\n",
+    "sheet_url = f\"https://docs.google.com/spreadsheets/d/{sheet_id}/export?gid=0&format=csv\"\n",
+    "df = pd.read_csv(sheet_url)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b158d534-9df2-4e06-9d08-0da54f49df7a",
    "metadata": {},
    "outputs": [
@@ -237,24 +230,27 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 663 entries, 0 to 662\n",
-      "Data columns (total 14 columns):\n",
-      "Date             663 non-null object\n",
-      "Year             663 non-null int64\n",
-      "Month            663 non-null int64\n",
-      "Day              663 non-null int64\n",
-      "lookup           663 non-null int64\n",
-      "Day of Week      663 non-null object\n",
-      "Category         663 non-null object\n",
-      "Aircraft Type    663 non-null object\n",
-      "# of Aircraft    663 non-null int64\n",
-      "Location         663 non-null object\n",
-      "Tail Numbers     6 non-null float64\n",
-      "Unnamed: 11      2 non-null object\n",
-      "Notes            122 non-null object\n",
-      "Source           663 non-null object\n",
-      "dtypes: float64(1), int64(5), object(8)\n",
-      "memory usage: 72.6+ KB\n"
+      "RangeIndex: 1014 entries, 0 to 1013\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Date           1014 non-null   object \n",
+      " 1   Year           1014 non-null   int64  \n",
+      " 2   Month          1014 non-null   int64  \n",
+      " 3   Day            1014 non-null   int64  \n",
+      " 4   lookup         1014 non-null   int64  \n",
+      " 5   Day of Week    1014 non-null   object \n",
+      " 6   Category       1014 non-null   object \n",
+      " 7   Aircraft Type  1014 non-null   object \n",
+      " 8   # of Aircraft  1014 non-null   int64  \n",
+      " 9   Location       1014 non-null   object \n",
+      " 10  Tail Numbers   6 non-null      float64\n",
+      " 11  Night          16 non-null     object \n",
+      " 12  Notes          169 non-null    object \n",
+      " 13  Source         1014 non-null   object \n",
+      " 14  Map            351 non-null    object \n",
+      "dtypes: float64(1), int64(5), object(9)\n",
+      "memory usage: 119.0+ KB\n"
      ]
     }
    ],
@@ -264,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9b013690-2aa2-4a4a-aa15-320c38e611f0",
    "metadata": {},
    "outputs": [
@@ -300,29 +296,29 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>663.000000</td>\n",
-       "      <td>663.000000</td>\n",
-       "      <td>663.000000</td>\n",
-       "      <td>663.000000</td>\n",
-       "      <td>663.000000</td>\n",
+       "      <td>1014.000000</td>\n",
+       "      <td>1014.000000</td>\n",
+       "      <td>1014.000000</td>\n",
+       "      <td>1014.000000</td>\n",
+       "      <td>1014.000000</td>\n",
        "      <td>6.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>2020.891403</td>\n",
-       "      <td>7.453997</td>\n",
-       "      <td>16.049774</td>\n",
-       "      <td>3.951735</td>\n",
-       "      <td>1.906486</td>\n",
+       "      <td>2021.275148</td>\n",
+       "      <td>6.721893</td>\n",
+       "      <td>16.001972</td>\n",
+       "      <td>4.007890</td>\n",
+       "      <td>2.074951</td>\n",
        "      <td>38874.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.482599</td>\n",
-       "      <td>3.956017</td>\n",
-       "      <td>8.667347</td>\n",
-       "      <td>1.965893</td>\n",
-       "      <td>2.480194</td>\n",
+       "      <td>0.656228</td>\n",
+       "      <td>3.580629</td>\n",
+       "      <td>8.593140</td>\n",
+       "      <td>1.955562</td>\n",
+       "      <td>2.497443</td>\n",
        "      <td>34341.216272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -346,16 +342,16 @@
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>2021.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>17.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>16.000000</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>25378.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>2021.000000</td>\n",
-       "      <td>11.000000</td>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>10.000000</td>\n",
        "      <td>23.000000</td>\n",
        "      <td>6.000000</td>\n",
        "      <td>2.000000</td>\n",
@@ -375,15 +371,15 @@
        "</div>"
       ],
       "text/plain": [
-       "              Year       Month         Day      lookup  # of Aircraft  \\\n",
-       "count   663.000000  663.000000  663.000000  663.000000     663.000000   \n",
-       "mean   2020.891403    7.453997   16.049774    3.951735       1.906486   \n",
-       "std       0.482599    3.956017    8.667347    1.965893       2.480194   \n",
-       "min    2020.000000    1.000000    1.000000    1.000000       1.000000   \n",
-       "25%    2021.000000    4.000000    9.000000    2.000000       1.000000   \n",
-       "50%    2021.000000    9.000000   17.000000    4.000000       1.000000   \n",
-       "75%    2021.000000   11.000000   23.000000    6.000000       2.000000   \n",
-       "max    2022.000000   12.000000   31.000000    7.000000      34.000000   \n",
+       "              Year        Month          Day       lookup  # of Aircraft  \\\n",
+       "count  1014.000000  1014.000000  1014.000000  1014.000000    1014.000000   \n",
+       "mean   2021.275148     6.721893    16.001972     4.007890       2.074951   \n",
+       "std       0.656228     3.580629     8.593140     1.955562       2.497443   \n",
+       "min    2020.000000     1.000000     1.000000     1.000000       1.000000   \n",
+       "25%    2021.000000     4.000000     9.000000     2.000000       1.000000   \n",
+       "50%    2021.000000     7.000000    16.000000     4.000000       1.000000   \n",
+       "75%    2022.000000    10.000000    23.000000     6.000000       2.000000   \n",
+       "max    2022.000000    12.000000    31.000000     7.000000      34.000000   \n",
        "\n",
        "       Tail Numbers  \n",
        "count      6.000000  \n",
@@ -396,7 +392,7 @@
        "max    82016.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,31 +403,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "397e3b93-bfb2-48d1-8596-b00f9a9de40d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Date               0\n",
-       "Year               0\n",
-       "Month              0\n",
-       "Day                0\n",
-       "lookup             0\n",
-       "Day of Week        0\n",
-       "Category           0\n",
-       "Aircraft Type      0\n",
-       "# of Aircraft      0\n",
-       "Location           0\n",
-       "Tail Numbers     657\n",
-       "Unnamed: 11      661\n",
-       "Notes            541\n",
-       "Source             0\n",
+       "Date                0\n",
+       "Year                0\n",
+       "Month               0\n",
+       "Day                 0\n",
+       "lookup              0\n",
+       "Day of Week         0\n",
+       "Category            0\n",
+       "Aircraft Type       0\n",
+       "# of Aircraft       0\n",
+       "Location            0\n",
+       "Tail Numbers     1008\n",
+       "Night             998\n",
+       "Notes             845\n",
+       "Source              0\n",
+       "Map               663\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3d101531-ef15-46e7-ad9f-115dd82aefa6",
    "metadata": {},
    "outputs": [],
@@ -453,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e66253d5-bda8-4a7e-9d24-12aa3ad6beda",
+   "id": "b9bfeffb-bb61-46e4-8eb2-3aa973bf9a34",
    "metadata": {},
    "outputs": [],
    "source": []
