--- a/CRK Image to Text/Script.ipynb
+++ b/CRK Image to Text/Script.ipynb
@@ -33,37 +33,38 @@
     "import cv2\n",
     "import numpy as np\n",
     "import os\n",
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5ae75d30-4942-463b-89a3-7f91906d5d42",
-   "metadata": {},
-   "source": [
-    "## Global Variables"
+    "import re\n",
+    "import "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "97612ac2-3748-4133-bc92-94f4517d587f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Season\n",
-    "SEASON = \"S3-1\""
+    "SEASON = \"S3-1\"\n",
+    "\n",
+    "# Set of allowed image formats\n",
+    "IMAGE_FORMATS = {'png', 'jpg', 'jpeg'} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "id": "e9d4a3dd-489d-46d6-a3aa-0d5b07fb61c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ocr_image(image_path, kernel_size=1):\n",
     "\n",
+    "    # Validate image file\n",
+    "    ext = os.path.splitext(image_path)[1].lower()\n",
+    "    if ext[1:] not in IMAGE_FORMATS and imghdr.what(image_path) not in IMAGE_FORMATS: \n",
+    "        raise Exception(\"Invalid image format\")\n",
+    "    \n",
     "    # Load image\n",
     "    image = Image.open(image_path)\n",
     "\n",
@@ -76,13 +77,12 @@
     "    # Perform OCR\n",
     "    text = pytesseract.image_to_string(blur)\n",
     "\n",
-    "    return text\n",
-    "\n"
+    "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "bab4f5fb-99d1-4165-810f-5f4c19fb8951",
    "metadata": {},
    "outputs": [
@@ -91,15 +91,24 @@
      "output_type": "stream",
      "text": [
       "Processing folder: valertine\n",
-      "\n",
-      "Processing folder: r2miss\n",
-      "Folder: r2miss\n",
+      "Folder: valertine\n",
       "Boss: Living Abyss\n",
-      "Damage: 301,591,756\n",
-      "Folder: r2miss\n",
+      "Damage: 246,340,361\n",
+      "Folder: valertine\n",
       "Boss: Red Velvet Dragon\n",
-      "Damage: 380,257,878\n",
-      "\n"
+      "Damage: 313,649,929\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'imghdr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_60942/1700042393.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;31m# Perform OCR on image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mocr_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;31m# Extract damage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_60942/536067777.py\u001b[0m in \u001b[0;36mocr_image\u001b[0;34m(image_path, kernel_size)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# Validate image file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mext\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mIMAGE_FORMATS\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mimghdr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mIMAGE_FORMATS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid image format\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'imghdr' is not defined"
      ]
     }
    ],
@@ -119,10 +128,6 @@
     "    \n",
     "    # Loop through images inside this folder\n",
     "    for filename in os.listdir(folder_path):\n",
-    "\n",
-    "        # Skip non-image files\n",
-    "        if not filename.endswith('.png'):\n",
-    "            continue\n",
     "\n",
     "        image_path = os.path.join(folder_path, filename)\n",
     "        \n",
