--- a/CRK Image to Text/Script.ipynb
+++ b/CRK Image to Text/Script.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 73,
    "id": "43305036-47b0-4e03-a774-e0b76f00b6e3",
    "metadata": {},
    "outputs": [],
@@ -32,14 +32,16 @@
     "from PIL import Image, ImageFilter\n",
     "import cv2\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import os\n",
     "import re\n",
-    "import "
+    "import imghdr\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "id": "97612ac2-3748-4133-bc92-94f4517d587f",
    "metadata": {},
    "outputs": [],
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "id": "e9d4a3dd-489d-46d6-a3aa-0d5b07fb61c0",
    "metadata": {},
    "outputs": [],
@@ -63,7 +65,7 @@
     "    # Validate image file\n",
     "    ext = os.path.splitext(image_path)[1].lower()\n",
     "    if ext[1:] not in IMAGE_FORMATS and imghdr.what(image_path) not in IMAGE_FORMATS: \n",
-    "        raise Exception(\"Invalid image format\")\n",
+    "        return None\n",
     "    \n",
     "    # Load image\n",
     "    image = Image.open(image_path)\n",
@@ -82,7 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
+   "id": "69cfb7fc-bc1b-44a3-85da-a330a9248aac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create empty dataframe \n",
+    "df = pd.DataFrame(columns=['IGN', 'Boss', 'Damage', 'Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "bab4f5fb-99d1-4165-810f-5f4c19fb8951",
    "metadata": {},
    "outputs": [
@@ -91,24 +104,8 @@
      "output_type": "stream",
      "text": [
       "Processing folder: valertine\n",
-      "Folder: valertine\n",
-      "Boss: Living Abyss\n",
-      "Damage: 246,340,361\n",
-      "Folder: valertine\n",
-      "Boss: Red Velvet Dragon\n",
-      "Damage: 313,649,929\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'imghdr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_60942/1700042393.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;31m# Perform OCR on image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mocr_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;31m# Extract damage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_60942/536067777.py\u001b[0m in \u001b[0;36mocr_image\u001b[0;34m(image_path, kernel_size)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# Validate image file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mext\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mIMAGE_FORMATS\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mimghdr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mIMAGE_FORMATS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid image format\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'imghdr' is not defined"
+      "Processing folder: hachi\n",
+      "Processing folder: r2miss\n"
      ]
     }
    ],
@@ -139,33 +136,120 @@
     "        \n",
     "        # Extract boss name\n",
     "        boss = re.search(r'(Living Abyss|Red Velvet Dragon|Avatar of Destiny)', text).group(1)\n",
-    "\n",
     "        \n",
-    "        # Print folder name and text\n",
-    "        print(f\"Folder: {folder_name}\")\n",
-    "        #print(f\"File: {filename}\")\n",
-    "        print(f\"Boss: {boss}\")\n",
-    "        print(f\"Damage: {damage}\")\n",
-    "\n",
-    "    print()"
+    "        # Get image upload date\n",
+    "        upload_time = os.path.getmtime(image_path)\n",
+    "        upload_date = datetime.fromtimestamp(upload_time).date()\n",
+    "        \n",
+    "        # Create new row\n",
+    "        new_row = {\n",
+    "            'IGN': folder_name,\n",
+    "            'Boss': boss,\n",
+    "            'Damage': damage,\n",
+    "            'Date': upload_date\n",
+    "        }\n",
+    "        \n",
+    "        # Append row to dataframe\n",
+    "        df = df.append(new_row, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 78,
    "id": "c0a7f4bc-b679-49e1-807e-f1e18ea280f1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Script.ipynb \u001b[34mimages\u001b[m\u001b[m\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IGN</th>\n",
+       "      <th>Boss</th>\n",
+       "      <th>Damage</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>valertine</td>\n",
+       "      <td>Living Abyss</td>\n",
+       "      <td>246,340,361</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>valertine</td>\n",
+       "      <td>Red Velvet Dragon</td>\n",
+       "      <td>313,649,929</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hachi</td>\n",
+       "      <td>Living Abyss</td>\n",
+       "      <td>311,758,542</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hachi</td>\n",
+       "      <td>Red Velvet Dragon</td>\n",
+       "      <td>352,638,865</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>r2miss</td>\n",
+       "      <td>Living Abyss</td>\n",
+       "      <td>301,591,756</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>r2miss</td>\n",
+       "      <td>Red Velvet Dragon</td>\n",
+       "      <td>380,257,878</td>\n",
+       "      <td>2023-07-13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         IGN               Boss       Damage        Date\n",
+       "0  valertine       Living Abyss  246,340,361  2023-07-13\n",
+       "1  valertine  Red Velvet Dragon  313,649,929  2023-07-13\n",
+       "2      hachi       Living Abyss  311,758,542  2023-07-13\n",
+       "3      hachi  Red Velvet Dragon  352,638,865  2023-07-13\n",
+       "4     r2miss       Living Abyss  301,591,756  2023-07-13\n",
+       "5     r2miss  Red Velvet Dragon  380,257,878  2023-07-13"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!ls"
+    "df"
    ]
   },
   {
