--- a/CRK Image to Text/dmgCheck.ipynb
+++ b/CRK Image to Text/dmgCheck.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "52afc8a0-2c90-40fd-b382-bf3363610b24",
-   "metadata": {},
-   "source": [
-    "## Imports"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cb9d6f2f-5586-4285-a06e-5d399ceae3eb",
@@ -45,19 +37,10 @@
     "import re\n",
     "\n",
     "# Dates\n",
-    "from datetime import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "97612ac2-3748-4133-bc92-94f4517d587f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Season\n",
-    "SEASON = \"S3-1\"\n",
-    "\n"
+    "from datetime import datetime\n",
+    "\n",
+    "# Set of allowed image formats\n",
+    "IMAGE_FORMATS = {'png', 'jpg', 'jpeg'} \n"
    ]
   },
   {
