removed unused import

--- a/crk/relicDonation.ipynb
+++ b/crk/relicDonation.ipynb
@@ -111,6 +111,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7254f1ff-64ee-435b-b079-570698c84eb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create empty dataframe \n",
+    "df = pd.DataFrame(columns=['IGN', 'Relic Donation Points', 'Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6f5adc1e-b18e-431e-8db0-ad4f9929c857",
    "metadata": {},
    "outputs": [],
