--- a/crk/relicDonation.ipynb
+++ b/crk/relicDonation.ipynb
@@ -127,7 +127,99 @@
    "outputs": [],
    "source": [
     "# Example call \n",
-    "slice_video_on_profile_change('video.mp4', 'segments')"
+    "#slice_video_on_profile_change('video.mp4', 'slice')\n",
+    "\n",
+    "# Folder path \n",
+    "folder_path = 'slice/' \n",
+    "\n",
+    "# Loop through all images in folder\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    \n",
+    "    # Perform OCR on image\n",
+    "    text = ocr_image(image_path)\n",
+    "    \n",
+    "    # Username is after first \\n\n",
+    "    username = text.split(\"\\n\", 1)[1]\n",
+    "\n",
+    "    # Points is last number before \"Prestige\"\n",
+    "    points = re.search(r'(\\d+)\\n.*Prestige', text).group(1)\n",
+    "\n",
+    "\n",
+    "    # Get image upload date\n",
+    "    upload_time = os.path.getmtime(image_path)\n",
+    "    upload_date = datetime.fromtimestamp(upload_time).date()\n",
+    "\n",
+    "    # Create new row\n",
+    "    new_row = {\n",
+    "        'IGN': username,\n",
+    "        'Relic Donation Points': points,\n",
+    "        'Date': upload_date\n",
+    "    }\n",
+    "\n",
+    "    # Append row to dataframe\n",
+    "    df = df.append(new_row, ignore_index=True)\n",
+    "\n",
+    "    # Drop duplicates\n",
+    "    df = df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b6e86b8a-1497-45b1-89cc-a924df9584d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$#% One Beyond the Starlight\\nCrimZon\\n\\n+3 ‘if Master 3\\n\\nN49] WISTERIA\\n\\nActivity Points 1023590 @\\n\\nBasic Activity Expansion Relic Donation\\nPoints oints t\\n402,527 18,163 602,900\\n\\n~@ Prestige 328,210 likes & Gifts\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ocr_image('slice/segment_1.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b953750-1dee-4a8c-92e5-79922a641880",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Crimson\n",
+    "SAIKA SAN\n",
+    "Acebites\n",
+    "BigBoyChaddy\n",
+    "ChocoChipDinie\n",
+    "darkvioletfox\n",
+    "Gingerdoodles\n",
+    "Glutenburgh\n",
+    "jjoool\n",
+    "jtrimble3\n",
+    "JuicyJJ1\n",
+    "Karou8\n",
+    "mangozic\n",
+    "MarinKitagawa\n",
+    "MelonBunii\n",
+    "Minty24\n",
+    "MochixIsland\n",
+    "Momomoses\n",
+    "Nickknack\n",
+    "Portallifesource\n",
+    "r2miss\n",
+    "RougeAether\n",
+    "SALTMAMA\n",
+    "Steveth\n",
+    "V1b1ingFlash\n",
+    "valertine\n",
+    "Windsweep\n",
+    "xChocobo\n",
+    "Zane0930"
    ]
   }
  ],
