--- a/crk/relicDonation.ipynb
+++ b/crk/relicDonation.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "85244bf1-c2f9-4cd4-91fe-633bb80fe625",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1d8775a3-7d78-4576-8ff1-ecf420afd264",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "acadfb9e-1265-4d19-8f1e-88f30ae24809",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def append_if_valid(df, row, valid_users):\n",
+    "    username = row['Username']\n",
+    "\n",
+    "    if username in valid_users:\n",
+    "        df = df.append(row, ignore_index=True)\n",
+    "\n",
+    "    return df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "7254f1ff-64ee-435b-b079-570698c84eb9",
    "metadata": {},
    "outputs": [],
@@ -121,76 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f5adc1e-b18e-431e-8db0-ad4f9929c857",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example call \n",
-    "#slice_video_on_profile_change('video.mp4', 'slice')\n",
-    "\n",
-    "# Folder path \n",
-    "folder_path = 'slice/' \n",
-    "\n",
-    "# Loop through all images in folder\n",
-    "for filename in os.listdir(folder_path):\n",
-    "    \n",
-    "    # Perform OCR on image\n",
-    "    text = ocr_image(image_path)\n",
-    "    \n",
-    "    # Username is after first \\n\n",
-    "    username = text.split(\"\\n\", 1)[1]\n",
-    "\n",
-    "    # Points is last number before \"Prestige\"\n",
-    "    points = re.search(r'(\\d+)\\n.*Prestige', text).group(1)\n",
-    "\n",
-    "\n",
-    "    # Get image upload date\n",
-    "    upload_time = os.path.getmtime(image_path)\n",
-    "    upload_date = datetime.fromtimestamp(upload_time).date()\n",
-    "\n",
-    "    # Create new row\n",
-    "    new_row = {\n",
-    "        'IGN': username,\n",
-    "        'Relic Donation Points': points,\n",
-    "        'Date': upload_date\n",
-    "    }\n",
-    "\n",
-    "    # Append row to dataframe\n",
-    "    df = df.append(new_row, ignore_index=True)\n",
-    "\n",
-    "    # Drop duplicates\n",
-    "    df = df.drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b6e86b8a-1497-45b1-89cc-a924df9584d4",
+   "execution_count": 7,
+   "id": "1b953750-1dee-4a8c-92e5-79922a641880",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'$#% One Beyond the Starlight\\nCrimZon\\n\\n+3 ‘if Master 3\\n\\nN49] WISTERIA\\n\\nActivity Points 1023590 @\\n\\nBasic Activity Expansion Relic Donation\\nPoints oints t\\n402,527 18,163 602,900\\n\\n~@ Prestige 328,210 likes & Gifts\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Crimson', 'SAIKA SAN', 'Acebites', 'BigBoyChaddy', 'ChocoChipDinie', 'darkvioletfox', 'Gingerdoodles', 'Glutenburgh', 'jjoool', 'jtrimble3', 'JuicyJJ1', 'Karou8', 'mangozic', 'MarinKitagawa  ', 'MelonBunii', 'Minty24', 'MochixIsland', 'Momomoses', 'Nickknack', 'Portallifesource', 'r2miss', 'RougeAether', 'SALTMAMA', 'Steveth', 'V1b1ingFlash', 'valertine', 'Windsweep', 'xChocobo', 'Zane0930']\n"
+     ]
     }
    ],
    "source": [
-    "ocr_image('slice/segment_1.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b953750-1dee-4a8c-92e5-79922a641880",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "usernames = \"\"\"\n",
     "Crimson\n",
     "SAIKA SAN\n",
     "Acebites\n",
@@ -204,7 +164,7 @@
     "JuicyJJ1\n",
     "Karou8\n",
     "mangozic\n",
-    "MarinKitagawa\n",
+    "MarinKitagawa  \n",
     "MelonBunii\n",
     "Minty24\n",
     "MochixIsland\n",
@@ -219,8 +179,93 @@
     "valertine\n",
     "Windsweep\n",
     "xChocobo\n",
-    "Zane0930"
+    "Zane0930\n",
+    "\"\"\"\n",
+    "\n",
+    "# Split by newline \n",
+    "username_list = usernames.split(\"\\n\")\n",
+    "\n",
+    "# Remove empty strings\n",
+    "valid_users = list(filter(None, username_list))\n",
+    "\n",
+    "print(valid_users)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ab6e15b4-b8a4-4f39-a745-4e244f9b7a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"@ Everybody's Friend\\nMelonBunii\\n\\nA jl Crystal 3\\n148) WISTERIA\\n\\nActivity Points 358,003 4a\\n\\nBasic Activity Expansion Relic Donation\\nPoints oints Points\\n250,000 803 107,200\\n\\n~™ Prestige 123,470 tikes & Gifts\\n\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ocr_image('slice/segment_41.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0a08f40-0457-4e5a-b1fd-5329bc7837c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example call \n",
+    "#slice_video_on_profile_change('video.mp4', 'slice')\n",
+    "\n",
+    "# Folder path \n",
+    "folder_path = 'slice/' \n",
+    "\n",
+    "# Loop through all images in folder\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    try:\n",
+    "        # Perform OCR on image\n",
+    "        text = ocr_image(folder_path+filename)\n",
+    "    \n",
+    "\n",
+    "        # Username is after first \\n\n",
+    "        username = text.split(\"\\n\", 1)[1]\n",
+    "\n",
+    "        # Points is last number before \"Prestige\"\n",
+    "        points = re.search(r'(\\d+)\\n.*Prestige', text).group(1)\n",
+    "\n",
+    "\n",
+    "        # Get image upload date\n",
+    "        upload_time = os.path.getmtime(image_path)\n",
+    "        upload_date = datetime.fromtimestamp(upload_time).date()\n",
+    "\n",
+    "        # Create new row\n",
+    "        new_row = {\n",
+    "            'IGN': username,\n",
+    "            'Relic Donation Points': points,\n",
+    "            'Date': upload_date\n",
+    "        }\n",
+    "\n",
+    "        # Append row if username is valid\n",
+    "        df = append_if_valid(df, row, valid_users)\n",
+    "\n",
+    "        # Drop duplicates\n",
+    "        df = df.drop_duplicates()\n",
+    "    except:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e1093b0-5c41-4541-bd01-c9ff726874e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
